--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">Consultium</div>
+        <div class="logo">
+            <svg width="170" height="40" viewBox="0 0 170 40">
+                <!-- Main text -->
+                <text x="45" y="28" font-family="Helvetica, Arial, sans-serif" font-size="22" font-weight="bold" fill="#1B365D">
+                    Consultium
+                </text>
+                
+                <!-- Stylized 'C' icon -->
+                <path d="M25,10 
+                         A15,15 0 0,1 25,30
+                         A15,15 0 0,1 25,10
+                         M25,13
+                         A12,12 0 0,0 25,27
+                         A12,12 0 0,0 25,13"
+                      fill="#1B365D"/>
+                
+                <!-- Abstract connecting elements -->
+                <path d="M28,20 L35,20" stroke="#C0C0C0" stroke-width="2"/>
+                <circle cx="38" cy="20" r="2" fill="#C0C0C0"/>
+            </svg>
+        </div>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
         </div>
